//syntax = "proto3";
//
//option java_multiple_files = true;
//
//option java_package = "billing";
//
//service BillingService{
//  rpc createBillingAccount(BillingRequest) returns (BillingResponse);
//  rpc DeactivateBillingAccount(DeactivateBillingRequest) returns (DeactivateBillingResponse);
//}
//
//message BillingRequest{
//  string patientId = 1;
//  string name = 2;
//  string email= 3;
//}
//
//
//message  BillingResponse{
//  string accountId = 1;
//  string patientId= 2;
//  string status = 3;
//}
//
//message DeactivateBillingRequest {
//  string patient_id = 1;
//}
//
//message DeactivateBillingResponse {
//  string status = 1;
//}


syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

service BillingService {
  rpc CreateBillingAccount(BillingRequest) returns (BillingResponse);
  rpc DeactivateBillingAccount(DeactivateBillingRequest) returns (DeactivateBillingResponse);
  rpc GetBillsByPatient(GetBillsByPatientRequest) returns (BillsResponse);
  rpc GetBillByPatientAndDate(GetBillByPatientAndDateRequest) returns (BillResponse);
  rpc AddCharge(AddChargeRequest) returns (BillResponse);
}

message BillingRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse {
  string billingAccountId = 1;
  string patientId = 2;
  string status = 3;
}

message DeactivateBillingRequest {
  string patientId = 1;
}

message DeactivateBillingResponse {
  string status = 1;
}

message GetBillsByPatientRequest {
  string patientId = 1;
  int32 page = 2;
  int32 size = 3;
}

message BillsResponse {
  repeated BillResponse bills = 1;
  int32 page = 2;
  int32 size = 3;
  int64 totalBills = 4;
}

message GetBillByPatientAndDateRequest {
  string patientId = 1;
  string billDate = 2; // YYYY-MM-DD
}

message BillResponse {
  string billId = 1;
  string patientId = 2;
  string billDate = 3; // YYYY-MM-DD
  double totalAmount = 4;
  repeated Charge charges = 5;
}

message AddChargeRequest {
  string patientId = 1;
  double amount = 2;
  string description = 3;
  string chargeDate = 4; // YYYY-MM-DD
}

message Charge {
  string chargeId = 1;
  double amount = 2;
  string description = 3;
  string chargeDate = 4; // YYYY-MM-DD
}